RESOLVED FIXED227971
[Cocoa] Web Inspector: REGRESSION(r271294) Service workers on iOS can't be inspected
https://bugs.webkit.org/show_bug.cgi?id=227971
Summary [Cocoa] Web Inspector: REGRESSION(r271294) Service workers on iOS can't be in...
Patrick Angle
Reported 2021-07-14 15:59:41 PDT
r271294 fixed service worker inspection on macOS, but in the process accidentally broke service worker inspection on iOS.
Attachments
Patch v1.0 (3.25 KB, patch)
2021-07-14 16:33 PDT, Patrick Angle
no flags
Radar WebKit Bug Importer
Comment 1 2021-07-14 15:59:51 PDT
Patrick Angle
Comment 2 2021-07-14 16:33:13 PDT
Created attachment 433541 [details] Patch v1.0
Per Arne Vollan
Comment 3 2021-07-19 11:09:00 PDT
Comment on attachment 433541 [details] Patch v1.0 R=me.
EWS
Comment 4 2021-07-19 11:14:01 PDT
Committed r280038 (239773@main): <https://commits.webkit.org/239773@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 433541 [details].
Note You need to log in before you can comment on or make changes to this bug.